tests/miniJava/neg/000142_mutation.MiniJava
class java { public static class java { public static void Main ( String [ ] java ) { { } } } Main ( String [ ] java ) { { } } }
